--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
-    span.s1 {font: 12.0px 'Apple Color Emoji'}
   </style>
 </head>
 <body>
@@ -73,25 +72,25 @@
 <p class="p1"><span class="Apple-converted-space">      </span>title: "Universal Consensus",</p>
 <p class="p1"><span class="Apple-converted-space">      </span>description: "100% agreement on realistic mandates shows unprecedented unity",</p>
 <p class="p1"><span class="Apple-converted-space">      </span>color: "#004d9f",</p>
-<p class="p1"><span class="Apple-converted-space">      </span>icon: "<span class="s1">🎯</span>"</p>
+<p class="p1"><span class="Apple-converted-space">      </span>icon: "🎯"</p>
 <p class="p1"><span class="Apple-converted-space">    </span>},</p>
 <p class="p1"><span class="Apple-converted-space">    </span>{</p>
 <p class="p1"><span class="Apple-converted-space">      </span>title: "Core Reform Areas",<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="Apple-converted-space">      </span>description: "95-100% agreement on fundamental peacekeeping changes",</p>
 <p class="p1"><span class="Apple-converted-space">      </span>color: "#009edb",</p>
-<p class="p1"><span class="Apple-converted-space">      </span>icon: "<span class="s1">🔄</span>"</p>
+<p class="p1"><span class="Apple-converted-space">      </span>icon: "🔄"</p>
 <p class="p1"><span class="Apple-converted-space">    </span>},</p>
 <p class="p1"><span class="Apple-converted-space">    </span>{</p>
 <p class="p1"><span class="Apple-converted-space">      </span>title: "Emerging Challenges",</p>
 <p class="p1"><span class="Apple-converted-space">      </span>description: "66% focus on new technologies reflects evolving security landscapes",</p>
 <p class="p1"><span class="Apple-converted-space">      </span>color: "#ffcc00",</p>
-<p class="p1"><span class="Apple-converted-space">      </span>icon: "<span class="s1">🔧</span>"</p>
+<p class="p1"><span class="Apple-converted-space">      </span>icon: "🔧"</p>
 <p class="p1"><span class="Apple-converted-space">    </span>},</p>
 <p class="p1"><span class="Apple-converted-space">    </span>{</p>
 <p class="p1"><span class="Apple-converted-space">      </span>title: "Accountability Gap",</p>
 <p class="p1"><span class="Apple-converted-space">      </span>description: "Low mention rates (12-20%) may indicate blind spots requiring attention",</p>
 <p class="p1"><span class="Apple-converted-space">      </span>color: "#ff6900",</p>
-<p class="p1"><span class="Apple-converted-space">      </span>icon: "<span class="s1">⚠️</span>"</p>
+<p class="p1"><span class="Apple-converted-space">      </span>icon: "⚠️"</p>
 <p class="p1"><span class="Apple-converted-space">    </span>}</p>
 <p class="p1"><span class="Apple-converted-space">  </span>];</p>
 <p class="p2"><br></p>
@@ -118,7 +117,7 @@
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;div className="bg-white rounded-lg shadow-lg p-8 border-l-4 border-blue-600"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">          </span>&lt;div className="flex items-center gap-4 mb-6"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&lt;div className="w-16 h-16 bg-blue-600 rounded-full flex items-center justify-center"&gt;</p>
-<p class="p1"><span class="Apple-converted-space">              </span>&lt;span className="text-2xl text-white"&gt;<span class="s1">🕊️</span>&lt;/span&gt;</p>
+<p class="p1"><span class="Apple-converted-space">              </span>&lt;span className="text-2xl text-white"&gt;🕊️&lt;/span&gt;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&lt;/div&gt;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&lt;div&gt;</p>
 <p class="p1"><span class="Apple-converted-space">              </span>&lt;h1 className="text-4xl font-bold text-gray-800"&gt;</p>
@@ -156,7 +155,7 @@
 <p class="p1"><span class="Apple-converted-space">              </span>onClick={() =&gt; setShowMethodology(!showMethodology)}</p>
 <p class="p1"><span class="Apple-converted-space">              </span>className="flex items-center gap-2 text-blue-600 hover:text-blue-800 font-medium"</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&gt;</p>
-<p class="p1"><span class="Apple-converted-space">              </span>&lt;span&gt;{showMethodology ? '<span class="s1">📖</span>' : '<span class="s1">📚</span>'}&lt;/span&gt;</p>
+<p class="p1"><span class="Apple-converted-space">              </span>&lt;span&gt;{showMethodology ? '📖' : '📚'}&lt;/span&gt;</p>
 <p class="p1"><span class="Apple-converted-space">              </span>{showMethodology ? 'Hide' : 'Show'} Methodology</p>
 <p class="p1"><span class="Apple-converted-space">            </span>&lt;/button&gt;</p>
 <p class="p2"><span class="Apple-converted-space">            </span></p>
@@ -216,10 +215,10 @@
 <p class="p1"><span class="Apple-converted-space">        </span>&lt;div className="bg-white rounded-lg shadow-sm border border-gray-200"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">          </span>&lt;div className="flex"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">            </span>{[</p>
-<p class="p1"><span class="Apple-converted-space">              </span>{ id: 'overview', name: 'Priority Overview', icon: '<span class="s1">📊</span>' },</p>
-<p class="p1"><span class="Apple-converted-space">              </span>{ id: 'tiers', name: 'Priority Tiers', icon: '<span class="s1">🏆</span>' },</p>
-<p class="p1"><span class="Apple-converted-space">              </span>{ id: 'insights', name: 'Key Insights', icon: '<span class="s1">💡</span>' },</p>
-<p class="p1"><span class="Apple-converted-space">              </span>{ id: 'countries', name: 'Country Participation', icon: '<span class="s1">🌍</span>' }</p>
+<p class="p1"><span class="Apple-converted-space">              </span>{ id: 'overview', name: 'Priority Overview', icon: '📊' },</p>
+<p class="p1"><span class="Apple-converted-space">              </span>{ id: 'tiers', name: 'Priority Tiers', icon: '🏆' },</p>
+<p class="p1"><span class="Apple-converted-space">              </span>{ id: 'insights', name: 'Key Insights', icon: '💡' },</p>
+<p class="p1"><span class="Apple-converted-space">              </span>{ id: 'countries', name: 'Country Participation', icon: '🌍' }</p>
 <p class="p1"><span class="Apple-converted-space">            </span>].map(tab =&gt; (</p>
 <p class="p1"><span class="Apple-converted-space">              </span>&lt;button</p>
 <p class="p1"><span class="Apple-converted-space">                </span>key={tab.id}</p>
@@ -364,13 +363,13 @@
 <p class="p1"><span class="Apple-converted-space">              </span>&lt;div className="prose max-w-none text-gray-700"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                </span>&lt;div className="grid md:grid-cols-2 gap-6"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                  </span>&lt;div&gt;</p>
-<p class="p1"><span class="Apple-converted-space">                    </span>&lt;h4 className="font-semibold text-blue-600 mb-2"&gt;<span class="s1">🎯</span> Universal Consensus Areas&lt;/h4&gt;</p>
+<p class="p1"><span class="Apple-converted-space">                    </span>&lt;h4 className="font-semibold text-blue-600 mb-2"&gt;🎯 Universal Consensus Areas&lt;/h4&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                    </span>&lt;p className="text-sm mb-4"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                      </span>The analysis reveals unprecedented unity on core peacekeeping reforms,<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="Apple-converted-space">                      </span>with 100% agreement on realistic mandates and 95-98% consensus on fundamental changes.</p>
 <p class="p1"><span class="Apple-converted-space">                    </span>&lt;/p&gt;</p>
 <p class="p2"><span class="Apple-converted-space">                    </span></p>
-<p class="p1"><span class="Apple-converted-space">                    </span>&lt;h4 className="font-semibold text-green-600 mb-2"&gt;<span class="s1">🔧</span> Implementation Focus&lt;/h4&gt;</p>
+<p class="p1"><span class="Apple-converted-space">                    </span>&lt;h4 className="font-semibold text-green-600 mb-2"&gt;🔧 Implementation Focus&lt;/h4&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                    </span>&lt;p className="text-sm"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                      </span>High-priority operational issues (70-89% mention rates) center on practical<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="Apple-converted-space">                      </span>implementation: peace continuum integration, host consent, transparency, and resource management.</p>
@@ -378,13 +377,13 @@
 <p class="p1"><span class="Apple-converted-space">                  </span>&lt;/div&gt;</p>
 <p class="p2"><span class="Apple-converted-space">                  </span></p>
 <p class="p1"><span class="Apple-converted-space">                  </span>&lt;div&gt;</p>
-<p class="p1"><span class="Apple-converted-space">                    </span>&lt;h4 className="font-semibold text-yellow-600 mb-2"&gt;<span class="s1">⚡</span> Emerging Challenges&lt;/h4&gt;</p>
+<p class="p1"><span class="Apple-converted-space">                    </span>&lt;h4 className="font-semibold text-yellow-600 mb-2"&gt;⚡ Emerging Challenges&lt;/h4&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                    </span>&lt;p className="text-sm mb-4"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                      </span>New technologies and misinformation emerge as significant concerns (66% mention rate),<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="Apple-converted-space">                      </span>reflecting the evolving nature of modern conflicts and peacekeeping operations.</p>
 <p class="p1"><span class="Apple-converted-space">                    </span>&lt;/p&gt;</p>
 <p class="p2"><span class="Apple-converted-space">                    </span></p>
-<p class="p1"><span class="Apple-converted-space">                    </span>&lt;h4 className="font-semibold text-orange-600 mb-2"&gt;<span class="s1">⚠️</span> Attention Gaps&lt;/h4&gt;</p>
+<p class="p1"><span class="Apple-converted-space">                    </span>&lt;h4 className="font-semibold text-orange-600 mb-2"&gt;⚠️ Attention Gaps&lt;/h4&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                    </span>&lt;p className="text-sm"&gt;</p>
 <p class="p1"><span class="Apple-converted-space">                      </span>Surprisingly low focus on accountability mechanisms (20%) and sexual exploitation<span class="Apple-converted-space"> </span></p>
 <p class="p1"><span class="Apple-converted-space">                      </span>issues (12%) may indicate either significant progress or potential oversight areas.</p>
